<?xml version="1.0"?>
<package format="2">
  <name>easy_pid_controller_pkg</name>
  <version>0.1.0</version>
  <description>
    鐙珛鐨?PID 鎺у埗鍣ㄥ簱锛屾敮鎸佷綅缃紡 P/I/D 涓夐」瀹屾暣鎺у埗銆?    鎻愪緵鏍囬噺鍜屼簩缁村悜閲忎袱绉嶆帴鍙ｏ紝甯︾Н鍒嗛檺骞呫€佸井鍒嗕綆閫氭护娉€?    姝诲尯鍜岄潤鎽╂摝琛ュ伩銆傚唴缃法浠诲姟瀹夊叏淇濇姢锛岃嚜鍔ㄦ娴嬮暱鏃堕棿
    闂撮殧骞舵竻闆跺巻鍙茬姸鎬併€?  </description>
  <maintainer email="1845656097@qq.com">robopioneer</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <build_depend>libeigen3-dev</build_depend>
  <export>
    <build_type>catkin</build_type>
  </export>
</package>