<?xml version="1.0"?>
<package format="2">
  <name>easy_pid_controller_pkg</name>
  <version>0.1.0</version>
  <description>
    独立的 PID 控制器库，支持位置式 P/I/D 三项完整控制。
    提供标量和二维向量两种接口，带积分限幅、微分低通滤波、
    死区和静摩擦补偿。内置跨任务安全保护，自动检测长时间
    间隔并清零历史状态。
  </description>

  <maintainer email="1845656097@qq.com">robopioneer</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

  <build_depend>libeigen3-dev</build_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
